Create vue answer components

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -91,3 +91,14 @@ form.form-delete {
         }
     }
 }
+
+.post {
+    padding: 20px 0;
+    &:not(:last-child) {
+        border-bottom: 1px solid rgba($black, .1);
+    }
+}
+
+[v-cloak] {
+    display: none;
+}
