--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9517,3 +9517,15 @@ form.form-delete {
   color: #28a745;
 }
 
+.post {
+  padding: 20px 0;
+}
+
+.post:not(:last-child) {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+[v-cloak] {
+  display: none;
+}
+
