--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9461,12 +9461,12 @@ a.text-dark:focus {
 }
 
 .counters .status.answered {
-  border: 1px solid rgb(95, 187, 126);
-  color: rgb(95, 187, 126);
+  border: 1px solid #5fbb7e;
+  color: #5fbb7e;
 }
 
 .counters .status.answered-accepted {
-  background: rgb(95, 187, 126);
+  background: #5fbb7e;
   color: #fff;
 }
 
