--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,5 +1,7 @@
+$color-white: #fff;
+
 // Body
-$body-bg: #f5f8fa;
+$body-bg: $color-white;
 
 // Typography
 $font-family-sans-serif: "Raleway", sans-serif;
@@ -9,3 +11,5 @@ $line-height-base: 1.6;
 $color-green: rgb(95, 187, 126);
 
 $color-white: #fff;
+
+
