Add transition effect & AJAX spinner

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -106,3 +106,13 @@ form.form-delete {
 body {
     background: #f5f8fa;
 }
+
+.fade-enter-active,
+.fade-leave-active {
+    transition: opacity .3s linear;
+}
+
+.fade-enter,
+.fade-leave-to {
+    opacity: 0;
+}
